log/build_2025-09-28_16-45-02/ros2_zhongli_bridge_cpp/stderr.log
In file included from /opt/ros/humble/include/rclcpp/rclcpp/logging.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:40,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/include/ros2_zhongli_bridge.hpp:3,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:1:
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp: In member function ‘bool zhongli_bridge::ROS2ZhongliBridge::initialize()’:
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:30:41: warning: zero-length gnu_printf format string [-Wformat-zero-length]
   30 |         RCLCPP_INFO(this->get_logger(), "");
      |                                         ^~
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:42:41: warning: zero-length gnu_printf format string [-Wformat-zero-length]
   42 |         RCLCPP_INFO(this->get_logger(), "");
      |                                         ^~
In file included from /usr/include/c++/11/memory:76,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:153,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/tests/test_real_plan_subscription.cpp:1:
/usr/include/c++/11/bits/unique_ptr.h: In instantiation of ‘typename std::_MakeUniq<_Tp>::__single_object std::make_unique(_Args&& ...) [with _Tp = zhongli_bridge::PathConverter; _Args = {std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, double, double}; typename std::_MakeUniq<_Tp>::__single_object = std::unique_ptr<zhongli_bridge::PathConverter>]’:
/home/yhg/Documents/docs/zhongli/cpp_version/src/tests/test_real_plan_subscription.cpp:23:58:   required from here
/usr/include/c++/11/bits/unique_ptr.h:962:30: error: no matching function for call to ‘zhongli_bridge::PathConverter::PathConverter(std::__cxx11::basic_string<char>&, double, double)’
  962 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/yhg/Documents/docs/zhongli/cpp_version/src/tests/test_real_plan_subscription.cpp:4:
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:27:5: note: candidate: ‘zhongli_bridge::PathConverter::PathConverter(const string&, double)’
   27 |     PathConverter(const std::string& robot_id,
      |     ^~~~~~~~~~~~~
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:27:5: note:   candidate expects 2 arguments, 3 provided
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:19:7: note: candidate: ‘zhongli_bridge::PathConverter::PathConverter(const zhongli_bridge::PathConverter&)’
   19 | class PathConverter {
      |       ^~~~~~~~~~~~~
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:19:7: note:   candidate expects 1 argument, 3 provided
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:19:7: note: candidate: ‘zhongli_bridge::PathConverter::PathConverter(zhongli_bridge::PathConverter&&)’
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:19:7: note:   candidate expects 1 argument, 3 provided
gmake[2]: *** [src/tests/CMakeFiles/test_real_plan_subscription.dir/build.make:76: src/tests/CMakeFiles/test_real_plan_subscription.dir/test_real_plan_subscription.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:285: src/tests/CMakeFiles/test_real_plan_subscription.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
